Learning about div and image styling

--- a/intro-to-html/displayprac.html
+++ b/intro-to-html/displayprac.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Display</title>
-    <link rel="stylesheet" href="styles/displayp.css"
+    <link rel="stylesheet" href="styles/displayp.css">
 </head>
 <body>
-    <input  type="text" placeholder="Name">
+   <!--- <input  type="text" placeholder="Name">
     <input  type="text" placeholder="Email">
     <br>
     <br>
@@ -16,10 +16,18 @@
     <button>No</button>
     <br>
     <br>
-    <img src="images/google-logo-2020.jpg">
+    <img src="images/google-logo.png">
     <input class="google" type="text" placeholder="Search Google or type a URL">
     <br>
-    <br>
-    
+    <br>-->
+    <!--<input class="firstName" type="text" placeholder="First name">
+    <input class="SecondName" type="text" placeholder="Last name">
+    <input class="Email" type="text" placeholder="Email">
+    <button class="Sign-up">Sign Up</button>-->
+    <p class="uber-font">Request A ride now</p>
+    <input class="pickup" type="text" placeholder="Enter Pickup location">
+    <input class="destination" type="text" placeholder="Enter destination">
+    <button class="uber-f">Request now</button>
+    <button class="uber-s">Schedule for Later</button>
 </body>
 </html>
