--- a/intro-to-html/div.html
+++ b/intro-to-html/div.html
@@ -22,7 +22,7 @@
         <img  class="image7g" src="images/catu.jpg">
         <input class="text7g" type="text" placeholder="what's happening?">
         <button class="button7g">Tweet</button>
-    </div>
+    </div>-->
     <div class="div9f">
         <img class="image9f" src="images/cat.jpg">
         <p class="p19f">Oliver</p>
@@ -40,8 +40,8 @@
         <p class="p19f">Rex</p>
         <p class="p29f">4 mutual friends</p>
         <button class="p39f">Add Friend</button>
-    </div>-->
-    <div>
+    </div>
+   <!--<div>
        <img class="image" src="images/google-logo.png">
     </div>
     <div>
@@ -50,6 +50,6 @@
     <div class="text">
         <input class="feeling" type="text" placeholder="Google Search">
         <input class="feelinglucky" type="text" placeholder="I'm Feeling Lucky">
-    </div>
+    </div>-->
 </body>
 </html>
