--- a/youtube.html/text.html
+++ b/youtube.html/text.html
@@ -10,19 +10,41 @@
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/video.css">
+    <link rel="stylesheet" href="styles/sidebar.css">
 </head>
 <body>
     <div class="header">
-        <div class="left-section">left-section</div>
+        <div class="left-section">
+            <img class="hamburger-menu"src="icons/hamburger-menu.svg">
+            <img class="youtube-logo"src="icons/youtube-logo.svg">
+        </div>
         <div class="middle-section">
             <input class="search-bar" type="text" placeholder="Search">
+            <button class="search-button">
+                <img class="search-icon"src="icons/search.svg">
+            </button>
+            <button class="voice-search-button">
+                <img  class="voice-search-icon"  src="icons/voice-search-icon.svg">
+            </button>
         </div>
-        <div class="right-section">right-section</div>
+        <div class="right-section">
+            <img  class="upload-icon" src="icons/upload.svg">
+            <img class="youtube-apps-icon " src="icons/youtube-apps.svg">
+            <div class="notification-icon-container">
+                <img class="notifications-icon" src="icons/notifications.svg">
+                <div class="notification-count">3</div>
+            </div>
+            <img class="current-user-picture" src="channels/my-channel.jpeg">
+        </div>
+    </div>
+    <div class="sidebar">
+        side
     </div>
     <div class="video-grid">
         <div class="video-preview">
             <div class="thumbnail-row"> 
                 <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+                <div class="video-time">14:20</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
@@ -44,6 +66,7 @@
         <div class="video-preview">
             <div class="thumbnail-row"> 
                 <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+                <div class="video-time">8:22</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
@@ -65,6 +88,7 @@
         <div class="video-preview">
             <div class="thumbnail-row"> 
                 <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+                <div class="video-time">9:13</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
@@ -86,6 +110,7 @@
         <div class="video-preview">
             <div class="thumbnail-row"> 
                 <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+                <div class="video-time">22:09</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
@@ -107,6 +132,7 @@
         <div class="video-preview">
             <div class="thumbnail-row"> 
                 <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+                <div class="video-time">11:17</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
@@ -128,6 +154,7 @@
         <div class="video-preview">
             <div class="thumbnail-row"> 
                 <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+                <div class="video-time">19:59</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
