--- a/youtube.html/text.html
+++ b/youtube.html/text.html
@@ -39,7 +39,7 @@
                 <img class="notifications-icon" src="icons/notifications.svg">
                 <div class="notification-count">3</div>
             </div>
-            <img class="current-user-picture" src="channels/my-channel.jpeg">
+            <img class="current-user-picture" src="channels/Abhinav-logo.png">
         </div>
     </header>
     <nav class="sidebar">
@@ -202,6 +202,139 @@
                     </div>
                 </div>  
             </div>
+            <div class="video-preview">
+                <div class="thumbnail-row"> 
+                    <img class="thumbnail" src="thumbnails/thumbnail-7.webp">
+                    <div class="video-time">10:13</div>
+                </div>
+                <div class="video-info-grid">
+                    <div class="channel-picture">
+                        <img class="profile-picture" src="channels/channel-7.jpeg">
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">
+                            Why Planes Don't Fly Over Tibet
+                            </p>
+                            <p class="video-author">
+                                RealLifeLore
+                            </p>
+                            <p class="video-stats">
+                                6.6M views · 1 year ago
+                            </p>
+                    </div>
+                </div>  
+            </div>
+            <div class="video-preview">
+                <div class="thumbnail-row"> 
+                    <img class="thumbnail" src="thumbnails/thumbnail-8.webp">
+                    <div class="video-time">7:12</div>
+                </div>
+                <div class="video-info-grid">
+                    <div class="channel-picture">
+                        <img class="profile-picture" src="channels/channel-8.jpeg">
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">
+                            Inside The World's Biggest Passenger Plane
+                            </p>
+                            <p class="video-author">
+                                Tech Vision
+                            </p>
+                            <p class="video-stats">
+                                3.7M views · 10 months ago
+                            </p>
+                    </div>
+                </div>  
+            </div>
+            <div class="video-preview">
+                <div class="thumbnail-row"> 
+                    <img class="thumbnail" src="thumbnails/thumbnail-9.webp">
+                    <div class="video-time">13:17</div>
+                </div>
+                <div class="video-info-grid">
+                    <div class="channel-picture">
+                        <img class="profile-picture" src="channels/channel-9.jpeg">
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">
+                           The SECRET to Super Human STRENGTH
+                            </p>
+                            <p class="video-author">
+                                Business Insider
+                            </p>
+                            <p class="video-stats">
+                                14M views · 1 year ago
+                            </p>
+                    </div>
+                </div>  
+            </div>
+            <div class="video-preview">
+                <div class="thumbnail-row"> 
+                    <img class="thumbnail" src="thumbnails/thumbnail-10.webp">
+                    <div class="video-time">7:53</div>
+                </div>
+                <div class="video-info-grid">
+                    <div class="channel-picture">
+                        <img class="profile-picture" src="channels/channel-10.jpeg">
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">
+                            Dubai's Crazy Underwater Train and Other Things #Only in Dubai
+                            </p>
+                            <p class="video-author">
+                                Destination Tips
+                            </p>
+                            <p class="video-stats">
+                                3M views · 1 year ago
+                            </p>
+                    </div>
+                </div>  
+            </div>
+            <div class="video-preview">
+                <div class="thumbnail-row"> 
+                    <img class="thumbnail" src="thumbnails/thumbnail-11.webp">
+                    <div class="video-time">4:10</div>
+                </div>
+                <div class="video-info-grid">
+                    <div class="channel-picture">
+                        <img class="profile-picture" src="channels/channel-11.jpeg">
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">
+                            Why Planes Don't Fly Over Tibet
+                            </p>
+                            <p class="video-author">
+                                RealLifeLore
+                            </p>
+                            <p class="video-stats">
+                                6.6M views · 1 year ago
+                            </p>
+                    </div>
+                </div>  
+            </div>
+            <div class="video-preview">
+                <div class="thumbnail-row"> 
+                    <img class="thumbnail" src="thumbnails/thumbnail-12.webp">
+                    <div class="video-time">4:51</div>
+                </div>
+                <div class="video-info-grid">
+                    <div class="channel-picture">
+                        <img class="profile-picture" src="channels/channel-12.jpeg">
+                    </div>
+                    <div class="video-info">
+                        <p class="video-title">
+                            What would happen if you didn’t drink water? - Mia Nacamulli
+                            </p>
+                            <p class="video-author">
+                                TED-Ed
+                            </p>
+                            <p class="video-stats">
+                                12M views · 5 years ago
+                            </p>
+                    </div>
+                </div>  
+            </div>
+            
         </section>
     </main>
     
