--- a/youtube.html/text.html
+++ b/youtube.html/text.html
@@ -72,7 +72,8 @@
         <section class="video-grid">
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+                    <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+                    <img class="thumbnail" src="thumbnails/thumbnail-1.webp"></a>
                     <div class="video-time">14:20</div>
                 </div>
                 <div class="video-info-grid">
@@ -94,7 +95,8 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+                    <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk">
+                    <img class="thumbnail" src="thumbnails/thumbnail-2.webp"></a>
                     <div class="video-time">8:22</div>
                 </div>
                 <div class="video-info-grid">
@@ -116,7 +118,8 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+                    <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w">
+                    <img class="thumbnail" src="thumbnails/thumbnail-3.webp"></a>
                     <div class="video-time">9:13</div>
                 </div>
                 <div class="video-info-grid">
@@ -138,7 +141,8 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+                    <a href="https://www.youtube.com/watch?v=094y1Z2wpJg">
+                    <img class="thumbnail" src="thumbnails/thumbnail-4.webp"></a>
                     <div class="video-time">22:09</div>
                 </div>
                 <div class="video-info-grid">
@@ -160,7 +164,8 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+                    <a href="https://www.youtube.com/watch?v=86CQq3pKSUw">
+                    <img class="thumbnail" src="thumbnails/thumbnail-5.webp"></a>
                     <div class="video-time">11:17</div>
                 </div>
                 <div class="video-info-grid">
@@ -182,7 +187,8 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+                    <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg">
+                    <img class="thumbnail" src="thumbnails/thumbnail-6.webp"></a>
                     <div class="video-time">19:59</div>
                 </div>
                 <div class="video-info-grid">
@@ -204,7 +210,8 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-7.webp">
+                    <a href="https://www.youtube.com/watch?v=fNVa1qMbF9Y">
+                    <img class="thumbnail" src="thumbnails/thumbnail-7.webp"></a>
                     <div class="video-time">10:13</div>
                 </div>
                 <div class="video-info-grid">
@@ -226,7 +233,8 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-8.webp">
+                    <a href="https://www.youtube.com/watch?v=0nZuYyXET3s">
+                    <img class="thumbnail" src="thumbnails/thumbnail-8.webp"></a>
                     <div class="video-time">7:12</div>
                 </div>
                 <div class="video-info-grid">
@@ -248,7 +256,8 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-9.webp">
+                    <a href="https://www.youtube.com/watch?v=ixmxOlcrlUc">
+                    <img class="thumbnail" src="thumbnails/thumbnail-9.webp"></a>
                     <div class="video-time">13:17</div>
                 </div>
                 <div class="video-info-grid">
@@ -270,7 +279,8 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-10.webp">
+                    <a href="https://www.youtube.com/watch?v=R2vXbFp5C9o">
+                    <img class="thumbnail" src="thumbnails/thumbnail-10.webp"></a>
                     <div class="video-time">7:53</div>
                 </div>
                 <div class="video-info-grid">
@@ -292,7 +302,8 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-11.webp">
+                    <a href="https://www.youtube.com/watch?v=0nZuYyXET3s">
+                    <img class="thumbnail" src="thumbnails/thumbnail-11.webp"></a>
                     <div class="video-time">4:10</div>
                 </div>
                 <div class="video-info-grid">
@@ -314,7 +325,8 @@
             </div>
             <div class="video-preview">
                 <div class="thumbnail-row"> 
-                    <img class="thumbnail" src="thumbnails/thumbnail-12.webp">
+                    <a href="https://www.youtube.com/watch?v=9iMGFqMmUFs">
+                    <img class="thumbnail" src="thumbnails/thumbnail-12.webp"></a>
                     <div class="video-time">4:51</div>
                 </div>
                 <div class="video-info-grid">
